--- a/Index.html
+++ b/Index.html
@@ -8,24 +8,48 @@
           </div>
        </div>
        <div class="row">
-          <div class="col-4 text-center">
+          <div class="col-2 text-center">
              <label id="product1"> Adidas </label>
-             <img src="images/s21.png" style="width: 400px;height:500px;" clasg="ing-thumbnail" /><br>
-             ‹label for="product1" id="pricel">27000.00‹/1abel>
-             <input type="number" clagg="form-control" id="qty1" placeholder="Enter quantity"/>br>
+             <img src="adidas.jpg" style="width: 100px;height:200px;" class="img-thumbnail" /><br>
+             <label for="product1" id="pricel">5000.00‹/1abel>
+             <input type="number" class="form-control" id="qty1" placeholder="Enter quantity"/>br>
           </ div>
-          ‹div clasg="col-4 text-center">
-             <label id="product2"> Samsung S22</label>
-             Kimg src="images/s22.png" style="width: 400px;height:500px;" clasg="ing-thumbnail" />br>
-             <label for="product2" id="price2">37000.00</1abel>
-             <input type="number" clagg="form-control" id="qty2" placeholder="Enter quantity"/>br>
+          <div class="col-2 text-center">
+             <label id="product2"> Nike </label>
+             <img src="nike.jpg" style="width: 100px;height:200px;" class="img-thumbnail" /><br>
+             <label for="product2" id="price2">6500.00</1abel>
+             <input type="number" class="form-control" id="qty2" placeholder="Enter quantity"/><<br>
           </div>
-          <div clasg="col-4">
-             (label for="carts"> Orders </label<br>
-             ‹textarea clagg="form-control" rowg="29" id="carts" colg="200" readonly style="width:350px;height: 400;font-size: 12px;"> </textarea> 
-             <input type="text" clasg="form-control border-0" id="total" readonly placeholder="Total"/> 
-             <input type="number" clagg="form-control" id="cash" placeholder="Cash Tendered" />
-             <input type="text" clagg="form-control border-0" id="change" readonly placeholder="Change" />
+         <div class="col-2 text-center">
+             <label id="product2"> Puma </label>
+             <img src="puma.jpg" style="width: 100px;height:200px;" class="img-thumbnail" /><br>
+             <label for="product3" id="price3">7450.00</label>
+             <input type="number" class="form-control" id="qty3" placeholder="Enter quantity"/><br>
+         </div>
+         <div class="col-2 text-center">
+             <label id="product4"> Converse </label>
+             <img src="converse.jpg" style="width: 100px;height:200px;" class="img-thumbnail" /><br>
+             <label for="product4" id="price4">3999.00</label>
+             <input type="number" class="form-control" id="qty4" placeholder="Enter quantity"/><br>
+          </div>
+            <div class="col-2 text-center">
+             <label id="product5"> Sketcher </label>
+             <img src="sketcher.jpg" style="width: 100px;height:200px;" class="img-thumbnail" /><br>
+             <label for="product5" id="price5">5999.00</label>
+             <input type="number" class="form-control" id="qty5" placeholder="Enter quantity"/><br>
+          </div>
+          <div class="col-2 text-center">
+             <label id="product6"> Reebok </label>
+             <img src="reebok.jpg" style="width: 100px;height:200px;" class="img-thumbnail" /><br>
+             <label for="product6" id="price6">4959.00</label>
+             <input type="number" class="form-control" id="qty6" placeholder="Enter quantity"/><br>
+          </div>
+          <div class="col-13">
+             <label for="carts"> Orders </label<br>
+             ‹textarea class="form-control" rows="29" id="carts" cols="200" readonly style="width:350px;height: 400;font-size: 12px;"> </textarea> 
+             <input type="text" class="form-control border-0" id="total" readonly placeholder="Total"/> 
+             <input type="number" class="form-control" id="cash" placeholder="Cash Tendered" />
+             <input type="text" class="form-control border-0" id="change" readonly placeholder="Change" />
           </ div>
       </div>
     </ div>
