--- a/index.html
+++ b/index.html
@@ -1,4 +1,24 @@
-</head>
+<DOCTYPE html>
+<html-lang="en"/>
+<title> Ginalyn Ramos BSIT 3 C</title>
+ <head>
+<link href="https://
+cdn.jsdelivr.net/npm/
+bootstrap@5.3.3/dist/css/.
+bootstrap.min.css" rel="stylesheet"
+integrity="sha384-QWTKZyjpPEj|Sv5WaRU90FeRpok6
+YctnYmDr5pNIyT2bRjXhOJMhjY6hW
++ALEWIH"
+crossorigin="anonymous">
+<script src="https://
+cdn.jsdelivr.net/npm/.
+bootstrap@5.3.3/dist/js/ bootstrap.bundle.min.js"
+integrity="sha384-
+YvpcrYfOtY3|HB60NNkmXc5s9fDVZ
+LESaAA55NDzOxhy9GkcIds|K1eN7
+N6jleHz"
+crossorigin= "anonymous"></script>
+ </head>
 ‹body>
     <div class="container">
        <div class="row">
