--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@ crossorigin= "anonymous"></script>
             <hr class="hr"/>
           </div>
        </div>
+    </div>
        <div class="row">
           <div class="col-2 text-center">
              <label id="product1"> Adidas </label>
@@ -34,12 +35,13 @@ crossorigin= "anonymous"></script>
              <label for="product1" id="pricel">5000.00‹/1abel>
              <input type="number" class="form-control" id="qty1" placeholder="Enter quantity"/>br>
           </ div>
+       </div>
           <div class="col-2 text-center">
              <label id="product2"> Nike </label>
              <img src="nike.jpg" style="width: 100px;height:200px;" class="img-thumbnail" /><br>
-             <label for="product2" id="price2">6500.00</1abel>
-             <input type="number" class="form-control" id="qty2" placeholder="Enter quantity"/><<br>
-          </div>
+             <label for="product2" id="price2">6500.00 </label>
+             <input type="number" class="form-control" id="qty2" placeholder="Enter quantity"/><br>
+          </div>     
          <div class="col-2 text-center">
              <label id="product2"> Puma </label>
              <img src="puma.jpg" style="width: 100px;height:200px;" class="img-thumbnail" /><br>
@@ -64,14 +66,14 @@ crossorigin= "anonymous"></script>
              <label for="product6" id="price6">4959.00</label>
              <input type="number" class="form-control" id="qty6" placeholder="Enter quantity"/><br>
           </div>
-          <div class="col-13">
-             <label for="carts"> Orders </label<br>
-             ‹textarea class="form-control" rows="29" id="carts" cols="200" readonly style="width:350px;height: 400;font-size: 12px;"> </textarea> 
+          <div class="col-12">
+             <label for="carts"> Orders </label><br>
+             <textarea class="form-control" rows="29" id="carts" cols="200" readonly style="width:350px;height: 400;font-size: 12px;"> </textarea> 
              <input type="text" class="form-control border-0" id="total" readonly placeholder="Total"/> 
              <input type="number" class="form-control" id="cash" placeholder="Cash Tendered" />
              <input type="text" class="form-control border-0" id="change" readonly placeholder="Change" />
-          </ div>
-      </div>
+          </div>
     </ div>
-    ‹script arc="Index.js"*/script>
-</body>
+    <script arc="index.js"></script>
+</body> 
+ </html-lang>
