--- a/index.html
+++ b/index.html
@@ -29,38 +29,44 @@ crossorigin= "anonymous"></script>
        </div>
     </div>
        <div class="row">
-          <div class="col-2 text-center">
+          <div class="col-4 text-center">
              <label id="product1"> Adidas </label>
-             <img src="adidas.jpg" style="width: 100px;height:200px;" class="img-thumbnail" />
+             <img src="adidas.jpg" style="width: 100px;height:200px;" class="img-thumbnail"/>
              <label for="product1" id="pricel">5000.00</label>
              <input type="number" class="form-control" id="qty1" placeholder="Enter quantity"/>
           </ div>
        </div>
-          <div class="col-2 text-center">
+          <div class="col-4 text-center">
              <label id="product2"> Nike </label>
              <img src="nike.jpg" style="width: 100px;height:200px;" class="img-thumbnail" />
              <label for="product2" id="price2">6500.00 </label>
              <input type="number" class="form-control" id="qty2" placeholder="Enter quantity"/>
           </div>     
-         <div class="col-2 text-center">
+         <div class="col-4 text-center">
              <label id="product2"> Puma </label>
              <img src="puma.jpg" style="width: 100px;height:200px;" class="img-thumbnail" />
              <label for="product3" id="price3">7450.00</label>
              <input type="number" class="form-control" id="qty3" placeholder="Enter quantity"/>
          </div>
-         <div class="col-2 text-center">
+   <div class="container">
+       <div class="row">
+          <div class="col-12 text-center">
+          </div>
+       </div>
+   </div>
+        <div class="col-4 text-center">
              <label id="product4"> Converse </label>
              <img src="converse.jpg" style="width: 100px;height:200px;" class="img-thumbnail" />
              <label for="product4" id="price4">3999.00</label>
              <input type="number" class="form-control" id="qty4" placeholder="Enter quantity"/>
           </div>
-            <div class="col-2 text-center">
+            <div class="col-4 text-center">
              <label id="product5"> Sketcher </label>
              <img src="sketcher.jpg" style="width: 100px;height:200px;" class="img-thumbnail" />
              <label for="product5" id="price5">5999.00</label>
              <input type="number" class="form-control" id="qty5" placeholder="Enter quantity"/>
           </div>
-          <div class="col-2 text-center">
+          <div class="col-4 text-center">
              <label id="product6"> Reebok </label>
              <img src="reebok.jpg" style="width: 100px;height:200px;" class="img-thumbnail" />
              <label for="product6" id="price6">4959.00</label>
