--- a/index.html
+++ b/index.html
@@ -21,10 +21,13 @@ crossorigin= "anonymous"></script>
  </head>
 <body>
    <h2>Ginalyn's Shoe MArket</h2>
-    
-<div class="container text-center">
-  <div class="row align-items-start">
-    <div class="col">
+</script>
+  </head>
+ <body>
+     <image>
+    <div class="container">
+      <div class="row">
+         <div class="col-4">    
              <label id="product1"> Adidas </label>
              <img src="adidas.jpg" style="width: 100px;height:200px;" class="img-thumbnail"/><br>
              <label for="product1" id="pricel">5000.00</label>
@@ -37,7 +40,8 @@ crossorigin= "anonymous"></script>
              <img src="nike.jpg" style="width: 100px;height:200px;" class="img-thumbnail" /><br>
              <label for="product2" id="price2">6500.00 </label>
              <input type="number" class="form-control" id="qty2" placeholder="Enter quantity"/><br>
-          </div> 
+          </div>
+    </div>
         <div class="col">
          <div class="col-4 text-center">
              <label id="product2"> Puma </label>
@@ -45,6 +49,7 @@ crossorigin= "anonymous"></script>
              <label for="product3" id="price3">7450.00</label>
              <input type="number" class="form-control" id="qty3" placeholder="Enter quantity"/><br>
          </div>
+        </div>
      <div class="container">
        <div class="row">
           <div class="col-12 text-center">
