--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 <html-lang="en"/>
 <title> Ginalyn Ramos BSIT 3 C</title>
  <head>
-<link href="https://
+bg-success {
+  --bs-bg-opacity: 1;
+  background-color: rgba(var(--bs-success-rgb), var(--bs-bg-opacity)) !important;
+}
+  <link href="https://
 cdn.jsdelivr.net/npm/
 bootstrap@5.3.3/dist/css/.
 bootstrap.min.css" rel="stylesheet"
@@ -20,7 +24,7 @@ N6jleHz"
 crossorigin= "anonymous"></script>
  </head>
 <body>
-   <h2>Ginalyn's Shoe MArket</h2>
+   <h2><center>Ginalyn's Shoe MArket</center></h2>
 </script>
   </head>
  <body>
