--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@ crossorigin= "anonymous"></script>
      <image>
     <div class="container">
       <div class="row">
-         <div class="col-2">    
+      <div class="col-12 text-center">
+         <div class="col-2 text-center">    
              <label id="product1"> Adidas </label>
              <img src="adidas.jpg" style="width: 100px;height:200px;" class="img-thumbnail"/><br>
              <label for="product1" id="pricel">5000.00</label>
@@ -35,32 +36,32 @@ crossorigin= "anonymous"></script>
           </ div>
        </div>
     <div class="col">
-          <div class="col-2">
+          <div class="col-2> text-center">
              <label id="product2"> Nike </label>
              <img src="nike.jpg" style="width: 100px;height:200px;" class="img-thumbnail" /><br>
              <label for="product2" id="price2">6500.00 </label>
              <input type="number" class="form-control" id="qty2" placeholder="Enter quantity"/><br>
           </div>
     </div>
-         <div class="col-2">
+         <div class="col-2 text-center">
              <label id="product2"> Puma </label>
              <img src="puma.jpg" style="width: 100px;height:200px;" class="img-thumbnail" /><br>
              <label for="product3" id="price3">7450.00</label>
              <input type="number" class="form-control" id="qty3" placeholder="Enter quantity"/><br>
          </div>
-          <div class="col-2">
+          <div class="col-2 text-center">
              <label id="product4"> Converse </label>
              <img src="converse.jpg" style="width: 100px;height:200px;" class="img-thumbnail" /><br>
              <label for="product4" id="price4">3999.00</label>
              <input type="number" class="form-control" id="qty4" placeholder="Enter quantity"/><br>
          </div>
-            <div class="col-2">
+            <div class="col-2 text-center">
              <label id="product5"> Sketcher </label>
              <img src="sketcher.jpg" style="width: 100px;height:200px;" class="img-thumbnail" /><br>
              <label for="product5" id="price5">5999.00</label>
              <input type="number" class="form-control" id="qty5" placeholder="Enter quantity"/><br>
          </div>
-          <div class="col-2">
+          <div class="col-2 text-center">
              <label id="product6"> Reebok </label>
              <img src="reebok.jpg" style="width: 100px;height:200px;" class="img-thumbnail" /><br>
              <label for="product6" id="price6">4959.00</label>
@@ -74,5 +75,5 @@ crossorigin= "anonymous"></script>
              <input type="text" class="form-control border-0" id="change" readonly placeholder="Change" />
           </div>
     <script arc="index.js"></script>
-</body> 
+   </body>
  </html-lang>
