--- a/index.html
+++ b/index.html
@@ -1,78 +1,70 @@
 <!DOCTYPE html>
-<html-lang="en"/>
-<title> Ginalyn Ramos BSIT 3 C</title>
- <head>
- </head>
- <body>
-<link href="https://
-cdn.jsdelivr.net/npm/
-bootstrap@5.3.3/dist/css/.
-bootstrap.min.css" rel="stylesheet"
-integrity="sha384-QWTKZyjpPEj|Sv5WaRU90FeRpok6
-YctnYmDr5pNIyT2bRjXhOJMhjY6hW
-+ALEWIH"
-crossorigin="anonymous">
-<script src="https://
-cdn.jsdelivr.net/npm/.
-bootstrap@5.3.3/dist/js/ bootstrap.bundle.min.js"
-integrity="sha384-
-YvpcrYfOtY3|HB60NNkmXc5s9fDVZ
-LESaAA55NDzOxhy9GkcIds|K1eN7
-N6jleHz"
-crossorigin= "anonymous"></script>
-    <div class="container">
-      <div class="row">
-      <div class="col-12 text-center">
-            <h2><center>RAMOS GINALYN'S SHOE MARKET</center></h2>
+<html lang="en"> <!-- Fixed attribute format -->
+<head>
+    <title>Ginalyn Ramos BSIT 3 C</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-QWTKZyjpPEjSv5WaRU90FeRpok6YctnYmDr5pNIyT2bRjXhOJMhjY6hW+ALEWIH"
+          crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-YvpcrYfOtY3HB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdsK1eN7N6jleHz"
+            crossorigin="anonymous"></script>
+</head>
+<body>
+<div class="container">
+    <div class="row">
+        <div class="col-12 text-center">
+            <h2>RAMOS GINALYN'S SHOE MARKET</h2>
             <hr class="hr"/>
         </div>
-     </div>
-     <div class="row">
-         <div class="col-2 text-center">    
-             <label id="product1"> Adidas </label>
-             <img src="adidas.jpg" style="width: 100px;height:200px;" class="img-thumbnail"/><br>
-             <label for="product1" id="pricel">5000.00</label>
-             <input type="number" class="form-control" id="qty1" placeholder="Enter quantity"/><br>
-          </div>
-          <div class="col-2 text-center">
-             <label id="product2"> Nike </label>
-             <img src="nike.jpg" style="width: 100px;height:200px;" class="img-thumbnail" /><br>
-             <label for="product2" id="price2">6500.00 </label>
-             <input type="number" class="form-control" id="qty2" placeholder="Enter quantity"/><br>
-          </div>
-          <div class="col-2 text-center">
-             <label id="product2"> Puma </label>
-             <img src="puma.jpg" style="width: 100px;height:200px;" class="img-thumbnail" /><br>
-             <label for="product3" id="price3">7450.00</label>
-             <input type="number" class="form-control" id="qty3" placeholder="Enter quantity"/><br>
-          </div>
-          <div class="col-2 text-center">
-             <label id="product4"> Converse </label>
-             <img src="converse.jpg" style="width: 100px;height:200px;" class="img-thumbnail" /><br>
-             <label for="product4" id="price4">3999.00</label>
-             <input type="number" class="form-control" id="qty4" placeholder="Enter quantity"/><br>
-          </div>
-          <div class="col-2 text-center">
-             <label id="product5"> Sketcher </label>
-             <img src="sketcher.jpg" style="width: 100px;height:200px;" class="img-thumbnail" /><br>
-             <label for="product5" id="price5">5999.00</label>
-             <input type="number" class="form-control" id="qty5" placeholder="Enter quantity"/><br>
-          </div>
-          <div class="col-2 text-center">
-             <label id="product6"> Reebok </label>
-             <img src="reebok.jpg" style="width: 100px;height:200px;" class="img-thumbnail" /><br>
-             <label for="product6" id="price6">4959.00</label>
-             <input type="number" class="form-control" id="qty6" placeholder="Enter quantity"/><br>
-          </div>
-    <div class="col-12">
-             <label for="carts"> Orders </label><br>
-             <textarea class="form-control" rows="29" id="carts" cols="200" readonly style="width:350px;height: 400;font-size: 12px;"> </textarea> 
-             <input type="text" class="form-control border-0" id="total" readonly placeholder="Total"/> 
-             <input type="number" class="form-control" id="cash" placeholder="Cash Tendered" />
-             <input type="text" class="form-control border-0" id="change" readonly placeholder="Change" />
-          </div>
-     </div>
     </div>
-    <script arc="index.js"></script>
+    <div class="row">
+        <div class="col-2 text-center">
+            <label id="product1">Adidas</label>
+            <img src="adidas.jpg" style="width: 100px; height: 200px;" class="img-thumbnail"/><br>
+            <label for="product1" id="price1">5000.00</label> <!-- Fixed ID to match the product -->
+            <input type="number" class="form-control" id="qty1" placeholder="Enter quantity"/><br>
+        </div>
+        <div class="col-2 text-center">
+            <label id="product2">Nike</label>
+            <img src="nike.jpg" style="width: 100px; height: 200px;" class="img-thumbnail"/><br>
+            <label for="product2" id="price2">6500.00</label>
+            <input type="number" class="form-control" id="qty2" placeholder="Enter quantity"/><br>
+        </div>
+        <div class="col-2 text-center">
+            <label id="product3">Puma</label> <!-- Fixed ID to match the product -->
+            <img src="puma.jpg" style="width: 100px; height: 200px;" class="img-thumbnail"/><br>
+            <label for="product3" id="price3">7450.00</label>
+            <input type="number" class="form-control" id="qty3" placeholder="Enter quantity"/><br>
+        </div>
+        <div class="col-2 text-center">
+            <label id="product4">Converse</label>
+            <img src="converse.jpg" style="width: 100px; height: 200px;" class="img-thumbnail"/><br>
+            <label for="product4" id="price4">3999.00</label>
+            <input type="number" class="form-control" id="qty4" placeholder="Enter quantity"/><br>
+        </div>
+        <div class="col-2 text-center">
+            <label id="product5">Sketcher</label>
+            <img src="sketcher.jpg" style="width: 100px; height: 200px;" class="img-thumbnail"/><br>
+            <label for="product5" id="price5">5999.00</label>
+            <input type="number" class="form-control" id="qty5" placeholder="Enter quantity"/><br>
+        </div>
+        <div class="col-2 text-center">
+            <label id="product6">Reebok</label>
+            <img src="reebok.jpg" style="width: 100px; height: 200px;" class="img-thumbnail"/><br>
+            <label for="product6" id="price6">4959.00</label>
+            <input type="number" class="form-control" id="qty6" placeholder="Enter quantity"/><br>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-12">
+            <label for="carts">Orders</label><br>
+            <textarea class="form-control" rows="29" id="carts" readonly style="width: 350px; height: 400px; font-size: 12px;"></textarea>
+            <input type="text" class="form-control border-0" id="total" readonly placeholder="Total"/>
+            <input type="number" class="form-control" id="cash" placeholder="Cash Tendered"/>
+            <input type="text" class="form-control border-0" id="change" readonly placeholder="Change"/>
+        </div>
+    </div>
+</div>
+<script src="index.js"></script> <!-- Fixed attribute 'arc' to 'src' -->
 </body>
- </html-lang>
+</html>
