--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en"> <!-- Fixed attribute format -->
+<html lang="en">
 <head>
     <title>Ginalyn Ramos BSIT 3 C</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-QWTKZyjpPEjSv5WaRU90FeRpok6YctnYmDr5pNIyT2bRjXhOJMhjY6hW+ALEWIH"
           crossorigin="anonymous">
+    <link rel="stylesheet" href="styles.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-YvpcrYfOtY3HB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdsK1eN7N6jleHz"
             crossorigin="anonymous"></script>
@@ -21,7 +22,7 @@
         <div class="col-2 text-center">
             <label id="product1">Adidas</label>
             <img src="adidas.jpg" style="width: 100px; height: 200px;" class="img-thumbnail"/><br>
-            <label for="product1" id="price1">5000.00</label> <!-- Fixed ID to match the product -->
+            <label for="product1" id="price1">5000.00</label>
             <input type="number" class="form-control" id="qty1" placeholder="Enter quantity"/><br>
         </div>
         <div class="col-2 text-center">
@@ -31,7 +32,7 @@
             <input type="number" class="form-control" id="qty2" placeholder="Enter quantity"/><br>
         </div>
         <div class="col-2 text-center">
-            <label id="product3">Puma</label> <!-- Fixed ID to match the product -->
+            <label id="product3">Puma</label>
             <img src="puma.jpg" style="width: 100px; height: 200px;" class="img-thumbnail"/><br>
             <label for="product3" id="price3">7450.00</label>
             <input type="number" class="form-control" id="qty3" placeholder="Enter quantity"/><br>
@@ -65,6 +66,6 @@
         </div>
     </div>
 </div>
-<script src="index.js"></script> <!-- Fixed attribute 'arc' to 'src' -->
+<script src="index.js"></script>
 </body>
 </html>
