--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-QWTKZyjpPEjSv5WaRU90FeRpok6YctnYmDr5pNIyT2bRjXhOJMhjY6hW+ALEWIH"
           crossorigin="anonymous">
+    <link rel="stylesheet" href="styles.css">
     <style>
         .product-column {
             text-align: center;
@@ -48,7 +49,7 @@
                     <hr class="hr"/>
                 </div>
             </div>
-            <div class="row">
+            <div class="row d-flex justify-content-center">
                 <div class="col-4 product-column">
                     <label id="product1">Adidas</label>
                     <img src="adidas.jpg" class="img-thumbnail"/><br>
