--- a/index.html
+++ b/index.html
@@ -57,10 +57,10 @@
             <div class="row order-section">
                 <div class="col-12 text-center">
                     <label for="carts">Orders</label><br>
-                    <textarea class="form-control" rows="10" id="carts" readonly style="width: 350px; font-size: 12px;"></textarea>
-                    <input type="text" class="form-control border-0" id="total" readonly placeholder="Total" style="width: 200px;"/>
-                    <input type="number" class="form-control" id="cash" placeholder="Cash Tendered" style="width: 200px;"/>
-                    <input type="text" class="form-control border-0" id="change" readonly placeholder="Change" style="width: 200px;"/>
+                    <textarea class="form-control" rows="10" id="carts" readonly></textarea>
+                    <input type="text" class="form-control border-0" id="total" readonly placeholder="Total"/>
+                    <input type="number" class="form-control" id="cash" placeholder="Cash Tendered"/>
+                    <input type="text" class="form-control border-0" id="change" readonly placeholder="Change"/>
                 </div>
             </div>
         </div>
