--- a/index.html
+++ b/index.html
@@ -66,8 +66,7 @@
             <div class="row">
                 <div class="col-12 text-center">
                     <hr class="hr"/>
-                    <div class="marquee"><span>BUY NOW!!!</span></div>
-                    <div class="marquee"><span>BUY NOW!!!</span></div>
+                    <div class="marquee"><span>BUY NOW!!!        BUY NOW!!!           BUY NOW!!!              BUY NOW!!!</span></div>
                     <h2 class="custom-heading">GINALYN'S SHOE MARKET</h2>
                 </div>
             </div>
