--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
             margin-bottom: 20px;
         }
         .product-column img {
-            width: 300px;
-            height: 300px;
+            width: 250px;
+            height: 250px;
             margin-bottom: 10px;
         }
         .product-column label {
@@ -43,7 +43,7 @@
             white-space: nowrap;
             overflow: hidden;
             box-sizing: border-box;
-            animation: scroll 10s linear infinite;
+            animation: scroll 20s linear infinite;
         }
         .marquee span {
             display: inline-block;
@@ -66,7 +66,7 @@
             <div class="row">
                 <div class="col-12 text-center">
                     <hr class="hr"/>
-                    <div class="marquee"><span>BUY NOW!!!        BUY NOW!!!           BUY NOW!!!              BUY NOW!!!</span></div>
+                    <div class="marquee"><span>BUY NOW!!!.............BUY NOW!!!...........BUY NOW!!!..............BUY NOW!!!</span></div>
                     <h2 class="custom-heading">GINALYN'S SHOE MARKET</h2>
                 </div>
             </div>
