--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-12 text-center">
+                     <marquee behavior="scroll" direction="left" class="custom-heading">BUY NOW!!!........BUY NOW!!!.........BUY NOW!!!</marquee>
                     <h2 class="custom-heading">GINALYN'S SHOE MARKET</h2>
                     <hr class="hr"/>
                 </div>
