--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
             margin-bottom: 20px;
         }
         .product-column img {
-            width: 200px;
-            height: 200px;
+            width: 250px;
+            height: 250px;
             margin-bottom: 10px;
         }
         .product-column label {
@@ -45,7 +45,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-12 text-center">
-                     <marquee behavior="scroll" direction="left" class="custom-heading">BUY NOW!!!........BUY NOW!!!.........BUY NOW!!!</marquee>
+                     <marquee behavior="scroll" direction="left" class="custom-heading">BUY NOW!!!........BUY NOW!!!.........BUY NOW!!!........BUY NOW!!!.........BUY NOW!!!</marquee>
                     <h2 class="custom-heading">GINALYN'S SHOE MARKET</h2>
                     <hr class="hr"/>
                 </div>
